# FrinterFlow

./: .gitignore  CONTRIBUTING.md  FrinterFlow-tasks.md  FrinterFlow.md  README.md  frinter-flow.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frinterflow/: __main__.py  audio.py  config.py  hotkeys.py  logger.py  main.py  overlay.py  sprites.py  transcriber.py
tests/: test_audio.py  test_overlay.py  test_sprites.py  test_transcriber.py
