[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frinterflow"
version = "1.0.0"
description = "Local voice dictation overlay with retro pixel Frint_bot — 100% offline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["voice", "dictation", "whisper", "local-ai", "overlay", "frinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pynput>=1.7.6",
    "rich>=13.7.0",
]

[project.scripts]
frinterflow = "frinterflow.main:run"

[project.urls]
Homepage = "https://github.com/delta240mvt/FrinterFlow"
Repository = "https://github.com/delta240mvt/FrinterFlow"
Issues = "https://github.com/delta240mvt/FrinterFlow/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["frinterflow"]

[tool.hatch.build.targets.sdist]
include = ["frinterflow/", "README.md", "LICENSE", "pyproject.toml"]
